@@ -1080,10 +1080,11 @@ Davon haben '''$2''' (=$4%) $5-Rechte.",
 # Miscellaneous special pages
 'nbytes'                          => '$1 {{PLURAL:$1|Byte|Bytes}}',
 'ncategories'                     => '$1 {{PLURAL:$1|Kategorie|Kategorien}}',
-'nlinks'                          => '{{PLURAL:$1|ein Verweis|$1 Verweise}}',
+'nlinks'                          => '{{PLURAL:$1|1 Verweis|$1 Verweise}}',
 'nmembers'                        => '– {{PLURAL:$1|1 Eintrag|$1 Einträge}}',
-'nrevisions'                      => '{{PLURAL:$1|eine Bearbeitung|$1 Bearbeitungen}}',
-'nviews'                          => '{{PLURAL:$1|eine Abfrage|$1 Abfragen}}',
+'nrevisions'                      => '{{PLURAL:$1|1 Bearbeitung|$1 Bearbeitungen}}',
+'nviews'                          => '{{PLURAL:$1|1 Abfrage|$1 Abfragen}}',
+'specialpage-empty'               => 'Die Seite enthält aktuell keine Einträge.',
 'lonelypages'                     => 'Verwaiste Seiten',
 'lonelypages-summary'             => 'Diese Spezialseite zeigt Seiten, auf die von keiner anderen Seite verlinkt wird. Diese verwaisten Seiten sind deshalb nicht erwünscht, oder eventuell fragwürdig, weil sie über die normale Navigation durch {{SITENAME}} nie aufgerufen werden können. ',
 'lonelypagestext'                 => '',
